--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,6 @@ name = "workout"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-rodio = "0.17"
+anyhow = "1.0.72"
+rodio = "0.17.1"
